--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -8,3 +8,12 @@ server.port=8082
 # uncomment the below lines to view sql output in console
 #spring.jpa.show-sql=true
 #spring.jpa.properties.hibernate.format_sql=true
+
+spring.datasource.url=jdbc:mysql://localhost:3306/CRITTER?createDatabaseIfNotExist=true
+spring.datasource.username=yz
+spring.datasource.password=yz1234
+spring.jpa.generate-ddl=true
+spring.jpa.hibernate.ddl-auto=create-drop
+spring.datasource.initialization-mode=always
+spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.format_sql=true
